Fix about me image on mobile devices

--- a/templates/static/style.css
+++ b/templates/static/style.css
@@ -673,10 +673,6 @@ video {
   flex-grow: 1;
 }
 
-.float-right {
-  float: right;
-}
-
 .font-semibold {
   font-weight: 600;
 }
@@ -695,10 +691,6 @@ video {
 
 .text-4xl {
   font-size: 2.25rem;
-}
-
-.m-4 {
-  margin: 1rem;
 }
 
 .mx-auto {
@@ -890,5 +882,15 @@ video {
   .md\:px-0 {
     padding-left: 0;
     padding-right: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .lg\:float-right {
+    float: right;
+  }
+
+  .lg\:m-4 {
+    margin: 1rem;
   }
 }
